devops303/namespaces-redis-devops303/devops303-service.yml
kind: Service
apiVersion: v1
metadata:
  name: service-devops303
spec: 
  selector:
    app: devops303
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8884
