devops303/namespaces-redis-devops303/service-redis-devops303.yml
kind: Service
apiVersion: v1
metadata:
  name: service-redis-devops303
spec: 
  selector:
    app: redis-devops303
  ports:
    - protocol: TCP
      port: 6379 
      targetPort: 6379
