devops303/namespaces-redis-devops303/devops303-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: devops303
spec:
  rules:
    - host: devops303.gautjam
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-devops303
                port:
                  number: 80
